--- a/src/views/elements/wizard-steps-navigation-default.html
+++ b/src/views/elements/wizard-steps-navigation-default.html
@@ -1,6 +1,6 @@
 <ul>
-  <li ng-repeat="step in steps">
-    <a href="" ng-click="wizard.changeStep(step.index)">{{step.stepData.name}}</a>
-    <p class="small">{{step.stepData.desc}}</p>
+  <li ng-repeat="step in steps track by $index">
+    <a href="" ng-click="::wizard.changeStep(step.index)">{{::step.stepData.name}}</a>
+    <p class="small">{{::step.stepData.desc}}</p>
   </li>
 </ul>
